# cterm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  api.h  config.json  config_json.c  config_json.h  cterm.c  cterm_extensions.c  cterm_generic.c  cterm_tests.c  libcterm.h  main.c
applications/: CMakeLists.txt  api.h  cterm_extensions.c  cterm_extensions.h  cterm_generic.c  cterm_generic.h  cterm_networking.c  cterm_networking.h  cterm_tests.c  cterm_user_environment.c  ls.c  pwd.c
tools/: CMakeLists.txt  get_module_description.c  get_module_name.c  get_module_version.c
